LunaChatとの連携追加

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,9 @@ countdown: 20
 bid-min-price-multi: 1.05 # 元値への倍率
 bid-min-price-add: 100 # 元値への加算値
 
+# LunaChatのオークション専用チャンネル名
+lc-auction-channel: "LGWAuction"
+
 # ルール説明の定型文
 rule:
   - "&d&l～運営オークションのルール～"
