--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,4 @@ version: '${project.version}'
 main: com.github.aburaagearou.yatchayatcha.YatchaYatcha
 api-version: '1.16'
 depend: [Vault]
+softdepend: [LunaChat]
