--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
           <id>jitpack.io</id>
           <url>https://jitpack.io</url>
       </repository>
+      <repository>
+          <id>ucchy-github</id>
+          <name>ucchy github repository</name>
+          <url>https://raw.github.com/ucchyocean/mvn-repo/master</url>
+      </repository>
+
   </repositories>
 
   <dependencies>
@@ -85,6 +91,12 @@
           <groupId>com.github.MilkBowl</groupId>
           <artifactId>VaultAPI</artifactId>
           <version>1.7</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>com.github.ucchyocean</groupId>
+          <artifactId>LunaChat</artifactId>
+          <version>2.8.9</version>
           <scope>provided</scope>
       </dependency>
   </dependencies>
